bad/assign_arr_elem_class_bool.example_compiler_output
ERROR
[1mbad/assign_arr_elem_class_bool.lat:6:16: [1;31merror: [0;1massigning to `Y` from incompatible type `boolean`[m
	(new Y[3])[1] = true;
	              [1;32m^[m
